[project]
name = "ros-lqos"
version = "0.1.0"
description = ""
authors = [
    {name = "hexatester",email = "revolusi147id@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "schedule (>=1.2.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "ros_lqos", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
